<resources>
    <string name="appName">AsoDesUnidos</string>
    <!-- Generales -->
    <!-- Estaticos -->
    <string name="nombreDeUsuario">Nombre de usuario</string>
    <string name="clave">Contraseña</string>
    <string name="nombre">Nombre</string>
    <string name="salario">Salario</string>
    <string name="telefono">Teléfono</string>
    <string name="fechaNacimiento">Fecha de nacmiento</string>
    <string name="direccion">Dirección</string>

    <!-- Flex -->
    <string name="mensajeBienvenidaFlex">¡Bienvenido, %1$s!</string>
    <string name="periodoFlex">Periodo: %1$d años</string>
    <string name="tipoFlex">Tipo: %1$s</string>
    <string name="interesFlex">Interés: %1$.2f%%</string>
    <string name="montoFlex">Monto: ₡%1$.2f</string>
    <string name="montoTotalFlex">Monto total: ₡%1$.2f</string>
    <string name="cuotaFlex">Cuota: ₡%1$.2f</string>
    <string name="fechaNacimientoFlex"> %1$d-%2$d-%3$d</string>

    <!-- Login -->
    <string name="ingresar">Ingresar</string>
    <string name="salir">Salir</string>

    <!-- Menu -->
    <string name="cerrarSesion">Cerrar Sesión</string>

    <!-- Menu Administrador -->
    <string name="agregarCliente">Agregar Cliente</string>
    <string name="agregarPrestamo">Agregar Préstamo</string>

    <!-- Menu Cliente-->
    <string name="misPrestamos">Préstamos</string>
    <string name="misAhorros">Ahorros</string>
    <string name="calcCouta">Calc. Cuota</string>
    <string name="informacionPersonal">Inf. Personal</string>


    <!-- Administrador -->
    <!-- General -->

    <!-- Agregar Cliente -->
    <string name="confirmarClave">Confirmar contraseña</string>
    <string name="cedula">Cédula</string>


    <!-- Asignar Prestamo -->
    <string name="cedulaDelCliente">Cédula del cliente</string>
    <string name="buscar">Buscar</string>
    <string name="cliente">Cliente: %1$s</string>
    <string name="montoMaximo">Monto máximo: ₡%1$.2f</string>

    <!-- Cliente -->
    <!-- General -->
    <string name="monto">Monto</string>

    <!-- Mis Prestamos -->
    <string name="pagar">Pagar</string>
    <string name="interes">Interés</string>
    <string name="periodo">Periodo</string>
    <string name="agregar">Agregar</string>

    <!-- Mis Ahorros -->
    <string name="activar">Activar</string>
    <string name="montoAhorrado">Monto ahorrado</string>
    <string name="cuotaMensual">Cuota mensual</string>


    <!-- Calcular Cuota -->
    <string name="annios3">3 años</string>
    <string name="annios5">5 años</string>
    <string name="annios10">10 años</string>
    <string name="tipoHipotecario">Hipotecario</string>
    <string name="tipoEducacion">Educación</string>
    <string name="tipoPersonal">Personal</string>
    <string name="tipoViajes">Viajes</string>
    <string name="tipoDePrestamo">Tipo del Préstamo</string>
    <string name="plazoDelPrestamo">Plazo del Préstamo</string>
    <string name="calcular">Calcular</string>

    <!-- Informacion -->
    <string name="editarInformacion">Editar información</string>



</resources>