<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controladores.cliente.InformacionPersonalFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/txtNombreCliente"
            android:layout_width="288dp"
            android:layout_height="56dp"
            android:ems="10"
            android:hint="@string/nombre"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.063"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/txtNumberSalario"
            android:layout_width="288dp"
            android:layout_height="56dp"
            android:ems="10"
            android:hint="@string/salario"
            android:inputType="number"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/txtNombreCliente"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/txtNombreCliente"
            app:layout_constraintTop_toBottomOf="@+id/txtNombreCliente"
            app:layout_constraintVertical_bias="0.06"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/txtTelefono"
            android:layout_width="288dp"
            android:layout_height="56dp"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/telefono"
            android:inputType="phone"
            app:layout_constraintEnd_toEndOf="@+id/txtNumberSalario"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/txtNumberSalario"
            app:layout_constraintTop_toBottomOf="@+id/txtNumberSalario"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/txtFecha"
            android:layout_width="288dp"
            android:layout_height="56dp"
            android:layout_marginTop="28dp"
            android:ems="10"
            android:hint="@string/fechaNacimiento"
            android:inputType="date"
            android:focusable="false"
            app:layout_constraintEnd_toEndOf="@+id/txtTelefono"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/txtTelefono"
            app:layout_constraintTop_toBottomOf="@+id/txtTelefono"
            android:importantForAutofill="no" />

        <Spinner
            android:id="@+id/spinnerEstadoCivil"
            android:layout_width="288dp"
            android:layout_height="56dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="@+id/txtFecha"
            app:layout_constraintStart_toStartOf="@+id/txtFecha"
            app:layout_constraintTop_toBottomOf="@+id/txtFecha"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/TxtMlDireccion"
            android:layout_width="288dp"
            android:layout_height="56dp"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/direccion"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="@+id/spinnerEstadoCivil"
            app:layout_constraintHorizontal_bias="0.475"
            app:layout_constraintStart_toStartOf="@+id/spinnerEstadoCivil"
            app:layout_constraintTop_toBottomOf="@+id/spinnerEstadoCivil"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/btnEditar"
            android:layout_width="200dp"
            android:layout_height="81dp"
            android:text="@string/editarInformacion"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/TxtMlDireccion"
            app:layout_constraintStart_toStartOf="@+id/TxtMlDireccion"
            app:layout_constraintTop_toBottomOf="@+id/TxtMlDireccion"
            tools:ignore="TextSizeCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>